--- a/electives/kkd/lab/lista-1/package.json
+++ b/electives/kkd/lab/lista-1/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "[kod](lista-1.ts)",
   "main": "index.js",
+  "dependencies": {
+    "@types/mathjs": "^6.0.4",
+    "mathjs": "^6.6.1",
+    "node": "^13.10.1"
+  },
+  "devDependencies": {
+    "@types/node": "^13.9.0",
+    "typescript": "^3.8.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^13.9.0"
-  }
+  "license": "ISC"
 }
