refactored and improved lista-2 in lab of 4th-semester/aisd

--- a/4th-semester/aisd/lab/lista-2/makefile
+++ b/4th-semester/aisd/lab/lista-2/makefile
@@ -1,10 +1,16 @@
 Flags = -B .
 
-test:
-	pwd
+all:
+	echo 'do make ex-i.out where i is in [1-4]'
 
-ex-1: sort.out swap-and-compare.out sort-direction.out quick-sort.out insertion-sort.out merge-sort.out
-	g++ $(Flags) ex-1.cpp -o ex-1.out $^
+main.out: ex-1.out ex-2.out algorithms.out sort.out swap-and-compare.out sort-direction.out quick-sort.out insertion-sort.out merge-sort.out
+	g++ $(Flags) main.cpp -o main.out $^
+
+ex-1.out:
+	g++ $(Flags) -c ex-1.cpp -o ex-1.out
+
+ex-2.out:
+	g++ $(Flags) -c ex-2.cpp -o ex-2.out
 
 sort-direction.out:
 	g++ $(Flags) -c shared/sort-direction.cpp -o sort-direction.out
@@ -23,6 +29,9 @@ insertion-sort.out:
 
 merge-sort.out:
 	g++ $(Flags) -c shared/algorithms/merge-sort.cpp -o merge-sort.out
+
+algorithms.out:
+	g++ $(Flags) -c shared/algorithms.cpp -o algorithms.out
 
 clean:
 	rm -r *.out
