significantly improved z1 of l1 of lab in electives/am

--- a/electives/am/lab/l1/z1/makefile
+++ b/electives/am/lab/l1/z1/makefile
@@ -1,9 +1,12 @@
 
-all: happy-cat.out norm.out sum-squared.out sum.out generate-neighbourhood.out
+all: happy-cat.out griewank.out norm.out sum-squared.out sum.out generate-neighbourhood.out
 	g++ main.cpp -o main $^
 
 happy-cat.out:
 	g++ -c happy-cat.cpp -o happy-cat.out
+
+griewank.out:
+	g++ -c griewank.cpp -o griewank.out
 
 norm.out:
 	g++ -c norm.cpp -o norm.out
