improved exercise 2 on lista-3 of lab of aisd

--- a/4th-semester/aisd/lab/lista-3/ex-2/makefile
+++ b/4th-semester/aisd/lab/lista-3/ex-2/makefile
@@ -1,7 +1,19 @@
 Flags = -B .
 
-main.out: random-generator.out
+all: select.out selection-algorithm.out swap-and-compare.out sort-direction.out
 	g++ $(Flags) main.cpp -o main.out $^
+
+selection-algorithm.out:
+	g++ $(Flags) -c algorithms/selection-algorithm.cpp -o selection-algorithm.out
+
+sort-direction.out:
+	g++ $(Flags) -c algorithms/sort-direction.cpp -o sort-direction.out
+
+swap-and-compare.out:
+	g++ $(Flags) -c algorithms/swap-and-compare.cpp -o swap-and-compare.out
+
+select.out:
+	g++ $(Flags) -c algorithms/select.cpp -o select.out
 
 random-generator.out:
 	g++ $(Flags) -c random-generator.cpp -o random-generator.out
