improved exercise 2 significantly on lista-3 of lab of aisd

--- a/4th-semester/aisd/lab/lista-3/ex-2/makefile
+++ b/4th-semester/aisd/lab/lista-3/ex-2/makefile
@@ -1,6 +1,6 @@
 Flags = -B .
 
-all: select.out selection-algorithm.out swap-and-compare.out sort-direction.out
+all: select.out selection-algorithm.out swap-and-compare.out sort-direction.out randomized-select.out random-generator.out
 	g++ $(Flags) main.cpp -o main.out $^
 
 selection-algorithm.out:
@@ -14,6 +14,9 @@ swap-and-compare.out:
 
 select.out:
 	g++ $(Flags) -c algorithms/select.cpp -o select.out
+
+randomized-select.out:
+	g++ $(Flags) -c algorithms/randomized-select.cpp -o randomized-select.out
 
 random-generator.out:
 	g++ $(Flags) -c random-generator.cpp -o random-generator.out
