--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ insert_final_newline = true
 [makefile]
 indent_style = tab
 
+[.gitmodules]
+indent_style = tab
+
 [*.py]
 indent_style = space
 indent_size = 4
