GKW: lab: completed lista-1

--- a/electives/gkw/lab/lista-1/makefile
+++ b/electives/gkw/lab/lista-1/makefile
@@ -1,13 +1,16 @@
 
 .PHONY: build clean
 
-build: _ex-1-2-3 _ex-4
+build: _ex-1-2-3 _ex-4 _ex-5
 
 _ex-1-2-3:
-	npx parcel build --public-url . --no-source-maps --dist-dir dist/ex-1-2-3 ex-1-2-3/index.html
+	npx parcel build --public-url . --dist-dir dist/ex-1-2-3 ex-1-2-3/index.html
 
 _ex-4:
-	npx parcel build --public-url . --no-source-maps --dist-dir dist/ex-4 ex-4/index.html
+	npx parcel build --public-url . --dist-dir dist/ex-4 ex-4/index.html
+
+_ex-5:
+	npx parcel build --public-url . --dist-dir dist/ex-5 ex-5/index.html
 
 dev:
 	npx parcel serve -p 4200 index.html
