--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ node_modules
 __pycache__
 
 # LaTeX
-
 *.aux
 *.fdb_latexmk
 *.fls
@@ -19,3 +18,8 @@ __pycache__
 *.synctex.gz
 *.bbl
 *.blg
+
+# Ada lang
+*.ali
+*.o
+*.bin
