GKW: lab: lista-2: improved ex-2, updated makefile and added the compiled version

--- a/electives/gkw/lab/lista-2/makefile
+++ b/electives/gkw/lab/lista-2/makefile
@@ -1,8 +1,13 @@
 
 .PHONY: build clean
 
+base_make = npx parcel build --public-url .
+
 build:
-	npx parcel build index.html
+	 $(base_make) ex-1/index.html --dist-dir dist/ex-1
+	 $(base_make) ex-2/index.html --dist-dir dist/ex-2
+	 $(base_make) ex-3/index.html --dist-dir dist/ex-3
+	 cp index.html dist/index.html
 
 dev:
 	npx parcel serve -p 4200 index.html
